disable 'send' button when illegal. Add 'undo' button

--- a/css/mixins.scss
+++ b/css/mixins.scss
@@ -17,10 +17,10 @@
 }
 
 @mixin selection {
-  &::-moz-selection {
+  #{if(&, "&", "*")}::-moz-selection {
     @content;
   }
-  &::selection {
+  #{if(&, "&", "*")}::selection {
     @content;
   }
 }
