--- a/css/style.scss
+++ b/css/style.scss
@@ -504,19 +504,90 @@ html.loading * {
     }
   }
 
-  html.error & {
-    background-color: $error-color;
-    color: $error-text-color;
+  & {
+    &:hover[disabled = ""] {
+      background-color: lighten(#546e7a, 8%);
+    }
+  }
+}
+#fab2 {
+  position: absolute;
+  right: $edge3;
+  bottom: $edge2;
+  box-shadow: $shadow3;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 2;
 
-    &:hover {
-      background-color: lighten($error-color, 8%);
+  html.animate-ui & {
+    transition: opacity $time-smooth ease-in-out,
+      transform $time-smooth ease-in-out;
+  }
+
+  @media (max-width: 570px) {
+    html.show-play-controls & {
+      transform: translateY(-$fab-height);
+    }
+  }
+
+  @media (max-width: 430px) {
+    html.show-current-move & {
+      transform: translateY(-$fab-height);
+    }
+    html.show-play-controls.show-current-move & {
+      transform: translateY(-$fab-height*1.5);
+    }
+  }
+
+  html.show-fab & {
+    opacity: 1;
+    pointer-events: all;
+  }
+
+  &:hover {
+    box-shadow: $shadow4;
+  }
+  &:active {
+    box-shadow: $shadow5;
+  }
+
+  i {
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    line-height: $fab-height;
+    transform: translate(-50%);
+    will-change: opacity, transform;
+
+    html.animate-ui.show-fab & {
+      transition: all $time-smooth ease-in-out;
     }
 
-    i {
-      opacity: 0 !important;
+    &.play {
+      transform: translate(-50%) rotate(179deg);
     }
-    i.error {
-      opacity: 1 !important;
+    &.edit {
+      transform: translate(-50%) rotate(-90deg);
+    }
+  }
+
+  html.editmode & {
+    i.play {
+      opacity: 1;
+      transform: translate(-50%);
+    }
+  }
+
+  html.playmode & {
+    i.edit {
+      opacity: 1;
+      transform: translate(-50%);
+    }
+  }
+
+  & {
+    &:hover[disabled = ""] {
+      background-color: lighten(#546e7a, 8%);
     }
   }
 }
