--- a/css/variables.scss
+++ b/css/variables.scss
@@ -60,6 +60,7 @@ $message-width: 350px;
 $menu-width: 270px;
 $edge: 16px;
 $edge2: $toolbar-height - $fab-height/2;
+$edge3: $edge2 + $fab-height*1.5;
 
 /* Animations */
 $time-slow: 1s;
